# cyberpunk-vr-port

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.opencode/memory/: MEMORY.md  aer-roadmap.md  build-cyberpunkvrport.md  project-cyberpunkvrport.md  settings-plumbing.md
docs/: cp2077-952xx-is-generic-task-scheduler.md  cp2077-activation-fn-ida.md  cp2077-attach-is-render-thread-virtual.md  cp2077-clone-crash-downstream-collection.md  cp2077-clone-crash-global-arena-slot.md  cp2077-d3d12-inplace-replay-m0.md  cp2077-d3d12-replay-feasibility.md  cp2077-deferred-stereo-wall.md  cp2077-dlss-rt-vs-stereo-approach.md  cp2077-dtw-hook-dead-registry-pivot.md  cp2077-dyntex-live-recipe.md  cp2077-eb4-unhookable-fc8-lever.md  cp2077-eye2-clone-shared-subobj.md  cp2077-framegraph-build-chain.md  cp2077-framegraph-node-executor-hookable.md  cp2077-framegraph-rt-routing.md  cp2077-gpu-backing-allocator-found.md  cp2077-inline-replay-dead-all-levels.md  cp2077-isenabled-necessary-not-sufficient.md  cp2077-live-rpm-and-attach-pivot.md  cp2077-loaddyntex-handle-producer.md  cp2077-mirror-planar-reflection-view.md  cp2077-native-addview-found.md  cp2077-native-simultaneous-exhausted.md  cp2077-native-stereo-roadmap.md  cp2077-node-exec-context-layout.md  cp2077-node-executor-reentrant.md  cp2077-node-replay-not-viable.md  cp2077-pass-census.md  cp2077-per-view-independent-fgbuild.md  cp2077-perview-camera-layout.md  cp2077-producer-addview-callsite.md  cp2077-producer-double-mutates-mgr.md  cp2077-producer-selection-structural.md  cp2077-proxy-attach-probe.md  cp2077-registry-injection-feasibility.md  cp2077-render-texmgr-handle.md  cp2077-render-texture-ctor.md  cp2077-rendertex-init-driver-stack.md  cp2077-rendertex-needs-generator.md  (+40 more)
images/: IMG_6564.HEIC  IMG_6566.HEIC  IMG_6570.HEIC
mods/cet/CyberpunkVRPort_Crosshair/: init.lua
mods/cet/CyberpunkVRPort_Hands_Test/: init.lua
mods/cet/CyberpunkVRPort_Holster/: init.lua
mods/cet/CyberpunkVRPort_VRIK/: init.lua
mods/cet/CyberpunkVRPort_Weapon/: init.lua
mods/cet/CyberpunkVRPort_WorldMap/: init.lua
mods/cet/CyberpunkVRPort_WorldMapDiag/: init.lua
mods/redscript/CyberpunkVRPort_Holster/: vrport_holster.reds
mods/redscript/CyberpunkVRPort_Melee/: vrport_melee.reds
mods/redscript/CyberpunkVRPort_NoAnims/: vrport_no_anims.reds
mods/redscript/CyberpunkVRPort_WeaponUp/: vrport_weapon_up.reds
mods/redscript/CyberpunkVRPort_WorldMap/: vrport_worldmap.reds
src/: color_blit.cpp  d3d12_proxy.cpp  depth_resolve.h  dxgi_factory_wrapper.cpp  dxgi_proxy.cpp  imgui_overlay.cpp  imgui_overlay.h  launcher_dialog.cpp  launcher_dialog.h  live_controls_ui.h  ngx_hook.cpp  ngx_hook.h  openxr_manager.cpp  openxr_manager.h  optical_flow_d3d12.cpp  optical_flow_d3d12.h  runtime_fov_correction.h
src/aer_v2/: aer_v2_pipeline.cpp  cuda_interop.cpp  nvof_instance.cpp  nvof_instance.h  pose_predictor.cpp  pose_predictor.h  warp_kernel.cpp  warp_kernel.h
src/common/: shared_slots.h
src/dxgi/aer_v2/: aer_v2_pipeline.h  cuda_interop.h  nvof_instance.cpp  quaternion_math.h  warp_kernel.cu
src/dxgi/camera/: camera_hook.h
src/dxgi/core/: dxgi_factory_wrapper.cpp  dxgi_factory_wrapper.h  dxgi_proxy.cpp
src/dxgi/hooks/: aob_scanner.h
src/dxgi/openxr/: openxr_aer_v2_worker.cpp  openxr_calibration.cpp  openxr_capture.cpp  openxr_frameloop.cpp  openxr_internal.h  openxr_manager.cpp  openxr_manager.h  openxr_math.h  openxr_present.cpp
src/dxgi/overlay/: imgui_overlay.cpp  live_controls_ui.h
src/dxgi/render/: color_blit.h  depth_resolve.cpp  mv_warp.cpp  mv_warp.h  optical_flow_d3d12.cpp  optical_flow_d3d12.h  sharpen_pass.cpp  sharpen_pass.h  stereo_reproject.cpp  stereo_reproject.h  warp_pass.cpp  warp_pass.h
src/red4ext_plugin/: CMakeLists.txt  main.cpp  vrik_hook.h
src/red4ext_plugin/vrik/: vrik_hook.h
src/red4ext_plugin/weapon/: weapon_aim_hook.h
